[package]
name = "norm"
version = "0.1.0"
edition = "2021"
authors = ["myl7 <myl@myl.moe>"]
description = ""
documentation = "https://github.com/myl7/norm#readme"
homepage = "https://github.com/myl7/norm"
repository = "https://github.com/myl7/norm.git"
license = "Apache-2.0"
keywords = []
categories = []

[dependencies]
