[package]
name = "norm"
version = "0.1.0"
edition = "2021"
authors = ["myl7 <myl@myl.moe>"]
description = "Use ptrace to trap unlink* syscall and do path validation to protect your files from sad unexpected unrecoverable deletion"
documentation = "https://github.com/myl7/norm#readme"
homepage = "https://github.com/myl7/norm"
repository = "https://github.com/myl7/norm.git"
license = "Apache-2.0"
keywords = ["ptrace", "cli"]
categories = ["command-line-utilities"]

[features]
bigendian = []

[dependencies]
nix = "0.23"
log = "0.4"
simple_logger = { version = "2.1", default-features = false, features = ["colors", "stderr"] }
spawn-ptrace = "0.1"
byteorder = "1.4"
strum = { version = "0.24", features = ["derive"] }
path-clean = "0.1"
lazy_static = "1.4"
os_pipe = "1.0"
clap = { version = "3.1", features = ["derive"] }
